2010-05-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.addin.xml: Changed some mac
	  shortcuts.

2010-05-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.Rename/RenameItemDialog.cs: Improved
	  the class renaming behaviour. (Bug 603938 - Renaming a Class
	  in a file with multiple classes renames the file)

2010-05-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.Rename/RenameRefactoring.cs: Fixed
	  'Bug 604085 - Renaming C# method inserts wrong name.'.

2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/RefactoryCommands.cs:
	* MonoDevelop.Refactoring/ImportSymbolHandler.cs:
	* MonoDevelop.Refactoring/FindReferencesHandler.cs:
	* MonoDevelop.Refactoring/GotoDeclarationHandler.cs:
	* MonoDevelop.CodeGeneration/CodeGenerationOptions.cs:
	* MonoDevelop.Refactoring/FindDerivedClassesHandler.cs:
	* MonoDevelop.Refactoring/AbstractRefactoringCommandHandler.cs:
	  Make use of the Document.Dom property.

2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/ImportSymbolHandler.cs: Check if the
	  file has a valid compilation unit.

2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/ImportSymbolHandler.cs: checked for
	  valid dom.

2010-05-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/ImportSymbolHandler.cs: Fixed 'Bug
	  601738 - Import Type list not sorted'.

2010-04-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/ImportSymbolHandler.cs: Cached
	  import symbol handler data.

2010-04-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.ConvertPropery/RemoveBackingStore.cs:
	  Fixed 'Bug 601136 - Remove backing store refactoring is
	  broken'.

2010-04-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Refactoring.addin.xml: Make Mac import symbol
	  consistent with Linux/Windows.

2010-04-28  Mike Krüger  <mkrueger@novell.com>
